fix table overflow

--- a/src/main/site/style.css
+++ b/src/main/site/style.css
@@ -165,8 +165,16 @@ li .plain_block {
     border-radius: 15px;
 }
 
+.table {
+    max-width: 100%;
+    margin: 0px;
+    overflow-x: auto;
+}
 table {
-    margin: 1em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
     empty-cells: show;
     border-collapse: collapse;
 }
